--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -33,8 +33,16 @@ clean-targets:         # directories to be removed by `dbt clean`
 # files using the `{{ config(...) }}` macro.
 models:
   mqbees:
+    quran_text:
+      +materialized: table
+      +schema: quran_text
     quran_info:
       +materialized: table
+    # python_models:
+    #   tanzil_quran_text:
+    #     config:
+    #       materialized: table
+      
 
 
 seeds:
