--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -1,7 +1,4 @@
 
-# Name your project! Project names should contain only lowercase characters
-# and underscores. A good package name should reflect your organization's
-# name or the intended use of these models
 name: 'mqbees'
 version: '1.0.0'
 config-version: 2
@@ -9,9 +6,7 @@ config-version: 2
 # This setting configures which "profile" dbt uses for this project.
 profile: 'mqbees'
 
-# These configurations specify where dbt should look for different types of files.
-# The `model-paths` config, for example, states that models in this project can be
-# found in the "models/" directory. You probably won't need to change these!
+
 model-paths: ["models"]
 analysis-paths: ["analyses"]
 test-paths: ["tests"]
@@ -24,34 +19,19 @@ clean-targets:         # directories to be removed by `dbt clean`
   - "target"
   - "dbt_packages"
 
-
-# Configuring models
-# Full documentation: https://docs.getdbt.com/docs/configuring-models
-
-# In this example config, we tell dbt to build all models in the example/
-# directory as views. These settings can be overridden in the individual model
-# files using the `{{ config(...) }}` macro.
 models:
   mqbees:
+    +schema: mqbees
     quran_text:
       +materialized: table
-      +schema: quran_text
     quran_info:
-      +materialized: table
-    # python_models:
-    #   tanzil_quran_text:
-    #     config:
-    #       materialized: table
-      
-
+      +materialized: table 
 
 seeds:
   mqbees:
     quran_meta:
       +schema: meta
       +materialized: seed
-    quran_text:
-      +schema: text
 
 
 
