added roots table in mqbees schema

--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -26,6 +26,8 @@ models:
       +materialized: table
     quran_info:
       +materialized: table 
+    quran_morphology:
+      +materialized: table
 
 seeds:
   mqbees:
